--- a/MavlinkBridge/MavlinkBridge.csproj
+++ b/MavlinkBridge/MavlinkBridge.csproj
@@ -68,12 +68,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ByteArrayUtil.cs" />
+    <Compile Include="CS.generated.cs" />
+    <Compile Include="CS_codec.generated.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrameworkBitConverter.cs" />
+    <Compile Include="Mavlink.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UdpState.cs" />
@@ -116,12 +121,6 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Mavlink\MAVLink.csproj">
-      <Project>{20296734-5F3C-4593-A0D5-DD20B440B13A}</Project>
-      <Name>MAVLink</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
