--- a/MavlinkBridge/MavlinkBridge.csproj
+++ b/MavlinkBridge/MavlinkBridge.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Mavlink.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendParams.cs" />
     <Compile Include="UdpState.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
