--- a/Mavlink/MAVLink.csproj
+++ b/Mavlink/MAVLink.csproj
@@ -49,6 +49,7 @@
     <Content Include="mavgen_csharp.py" />
     <Content Include="message_definitions\ardupilotmega.xml" />
     <Content Include="message_definitions\common.xml" />
+    <Content Include="message_definitions\unibo_mavlink.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
